# ouroboros

./: .gitignore  Cargo.toml  FUNCTION_TYPES.md  README.md  correspondencia.txt  ouroboros.toml  pudo.txt
docs/: architecture.md  faq.md  spec.md
examples/: basico.rs  minimal.rs  swmr.rs  wraparound.rs
src/: cell.rs  config.rs  db.rs  engine.rs  error.rs  genoma.rs  lib.rs  types.rs
tests/: multiprocess.rs
